2006-07-06  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/importing_cvs_branches_with_correct_ancestory/__driver__.lua:
	Move a sleep(). Maybe it'll work reliably now?

2006-07-06  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/fail_cleanly_on_unreadable__MTN_options/__driver__.lua:
	Monotone now checks that it was given a command before it looks at
	_MTN. So, check that "mtn status" fails properly, instead of just "mtn".

2006-07-06  Timothy Brownawell  <tbrownaw@gmail.com>

	* tester.cc: New function, does approximately "chmod -R u+rwx".
	* tester.lua: Use this on things we copy from the test dir to the
	scratch dir. This should fix the failures on the distcheck buildbots.
	* tests/importing_cvs_with_vendor_imports_and_branches/__driver__.lua:
	* tests/importing_cvs_files_with_identical_logs/__driver__.lua:
	Add sleep() s between some of the CVS operations.

2006-07-06  Alex Queiroz  <alex@ventonegro.org>

	* po/pt_BR.po: Fuzzies cleared and more strings translated.

2006-07-06  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Another fuzzy.

2006-07-06  Richard Levitte  <richard@levitte.org>

	* cmd_merging.cc (CMD(pluck)): A message said 'cherrypatch' when
	it should say 'pluck'.
	* po/sv.po: New strings to translate and a few fuzzies that needed
	changing.

2006-07-05  Nathaniel Smith  <njs@pobox.com>

	* tests/checking_a_few_command_specific_options/__driver__.lua
	(output): Fix test to actually work.

2006-07-05  Nathaniel Smith  <njs@pobox.com>

	* monotone.cc (cpp_main): Tyop in previous commit.

2006-07-05  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (complete_command): 
	* monotone.cc (cpp_main): Minor code cleanups.

2006-07-05  Nathaniel Smith  <njs@pobox.com>

	* tests/checking_a_few_command_specific_options/__driver__.lua:
	Add test for minor bug reported by Marcin 'hrw' Juszkiewicz.

2006-07-05  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/importing_cvs_branches_with_correct_ancestory/__driver__.lua: