@@ -17,15 +17,12 @@ tsha0 = sha1("testdir/importme")
 check(cvs("add", "testdir"), 0, false, false)
 check(cvs("add", "testdir/importme"), 0, false, false)
 check(cvs("commit", "-m", 'commit 0', "testdir/importme"), 0, false, false)
-sleep(1)
 writefile("testdir/importme", "version 1 of test file")
 tsha1 = sha1("testdir/importme")
 check(cvs("commit", "-m", 'commit same message', "testdir/importme"), 0, false, false)
-sleep(1)
 writefile("testdir/importme", "version 2 of test file")
 tsha2 = sha1("testdir/importme")
 check(cvs("commit", "-m", 'commit same message', "testdir/importme"), 0, false, false)
-sleep(1)
 writefile("testdir/importme", "version 3 of test file")
 tsha3 = sha1("testdir/importme")
 check(cvs("commit", "-m", 'commit 3', "testdir/importme"), 0, false, false)
